--- a/index.html
+++ b/index.html
@@ -3,35 +3,29 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Elemento Samples</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="https://fonts.googleapis.com/css?family=Overpass:300,100i" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
         <h1>Elemento Samples</h1>
-        <p>This site contains five different implementations of the <a href="http://todomvc.com/">TodoMVC</a> web app using <a href="https://github.com/hpehl/elemento">Elemento</a>:</p>
+        <p>This site contains contains different implementations of the <a href="http://todomvc.com/">TodoMVC</a> web app using <a href="https://github.com/hpehl/elemento">Elemento</a>:</p>
         <ul>
-            <li><a href="builder/index.html">Builder</a> - Using the builder API</li>
-            <li><a href="templated/index.html">Templated</a> - Using HTML templates</li>
-            <li><a href="errai/index.html">Errai</a> - Using Errai DI and the builder API</li>
-            <li><a href="dagger/index.html">Dagger</a> - Using Dagger DI and HTML templates</li>
-            <li><a href="gin/index.html">GIN</a> - Using GIN DI and HTML templates</li>
+            <li><a href="gwt/index.html">GWT</a> - GWT version</li>
+            <li><a href="j2cl/index.html">J2CL</a> - J2CL version</li>
         </ul>
         <p>All samples use the same key to persist the todo items in the local storage. So you can switch between the samples and continue working on your tasks seamlessly ;-)</p>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
         <script src="js/main.js"></script>
     </body>
 </html>
