--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
 <!doctype html>
 <html class="no-js" lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Elemento Samples</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link href="https://fonts.googleapis.com/css?family=Overpass:300,100i" rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <h1>Elemento Samples</h1>
-        <p>This site contains contains different implementations of the <a href="http://todomvc.com/">TodoMVC</a> web app using <a href="https://github.com/hpehl/elemento">Elemento</a>:</p>
-        <ul>
-            <li><a href="gwt/index.html">GWT</a> - GWT version</li>
-            <li><a href="j2cl/index.html">J2CL</a> - J2CL version</li>
-        </ul>
-        <p>All samples use the same key to persist the todo items in the local storage. So you can switch between the samples and continue working on your tasks seamlessly ;-)</p>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-        <script src="js/main.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Elemento Samples</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+    <!--[if IE]>
+        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+    <![endif]-->
+    <h1>Elemento Samples</h1>
+    <p>This site contains contains different implementations of the <a href="http://todomvc.com/">TodoMVC</a> web app using <a href="https://github.com/hpehl/elemento">Elemento</a>:</p>
+    <ul>
+        <li><a href="gwt/index.html">GWT</a> - GWT only</li>
+        <li><a href="j2cl/index.html">J2CL</a> -J2CL only</li>
+        <li><a href="crysknife/index.html">Crysknife</a> - J2CL with crysknife CDI and templates</li>
+    </ul>
+    <p>All samples use the same key to persist the todo items in the local storage. So you can switch between the samples and continue working on your tasks seamlessly ;-)</p>
+</body>
 </html>
