Fix elemento link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
     <h1>Elemento Samples</h1>
-    <p>This site contains contains different implementations of the <a href="http://todomvc.com/">TodoMVC</a> web app using <a href="https://github.com/hpehl/elemento">Elemento</a>:</p>
+    <p>This site contains contains different implementations of the <a href="http://todomvc.com/">TodoMVC</a> web app using <a href="https://github.com/hal/elemento">Elemento</a>:</p>
     <ul>
         <li><a href="gwt/index.html">GWT</a> - GWT only</li>
         <li><a href="j2cl/index.html">J2CL</a> -J2CL only</li>
