--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
     <h1>Elemento Samples</h1>
-    <p>This site contains contains different implementations of the <a href="http://todomvc.com/">TodoMVC</a> web app using <a href="https://github.com/hal/elemento">Elemento</a> and</p>
+    <p>This folder contains different implementations of the <a href="http://todomvc.com/">TodoMVC</a> application. Each sample uses <a href="https://github.com/hal/elemento">Elemento</a> and is based either on GWT or J2CL:</p>
     <ul>
-        <li><a href="gwt/index.html">GWT</a></li>
-        <li><a href="j2cl/index.html">J2CL</a></li>
-        <li><a href="crysknife/index.html">Crysknife</a></li>
+        <li><a href="gwt/index.html">GWT</a>: Pure Elemento based on GWT</li>
+        <li><a href="j2cl/index.html">J2CL</a>: Pure Elemento based on J2CL</li>
+        <li><a href="crysknife/index.html">Crysknife</a>: Elemento, Crysknife CDI, Crysknife templates based on J2CL</li>
     </ul>
     <p>All samples use the same key to persist the todo items in the local storage. So you can switch between the samples and continue working on your tasks seamlessly ;-)</p>
 </body>
