--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li><a href="gwt/index.html">GWT</a>: Based GWT and Elemento</li>
         <li><a href="j2cl/index.html">J2CL</a>: Based J2CL and Elemento</li>
-        <li><a href="crysknife/index.html">Crysknife</a>: Based on J2CL, Elemento, Crysknife CDI and Crysknife templates</li>
+        <!-- <li><a href="crysknife/index.html">Crysknife</a>: Based on J2CL, Elemento, Crysknife CDI and Crysknife templates</li> -->
     </ul>
     <p>All samples use the same key to persist the todo items in the local storage. So you can switch between the samples and continue working on your tasks seamlessly ;-)</p>
 </body>
