Add GWT 2.8.2 sample

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h1>Elemento Samples</h1>
     <p>This folder contains different implementations of the <a href="http://todomvc.com/">TodoMVC</a> application.</p>
     <ul>
-        <li><a href="gwt/index.html">GWT</a>: Based on GWT and Elemento</li>
+        <li><a href="gwt28/index.html">GWT 2.8</a>: Based on GWT 2.8, Elemental2 1.0.0-RC1 and Elemento</li>
+        <li><a href="gwt30/index.html">GWT HEAD-SNAPSHOT</a>: Based on GWT HEAD-SNAPSHOT and Elemento</li>
         <li><a href="j2cl/index.html">J2CL</a>: Based on J2CL and Elemento</li>
         <li><a href="crysknife/index.html">Crysknife</a>: Based on J2CL, Elemento, Crysknife CDI and Crysknife templates</li>
     </ul>
